tests/neg-macros/i9972/Macro_1.scala
package notmacro

import scala.util.Not

object Main extends App {
  summon[Not[T[Int]]] // error
}
